# supla-device

./: .drone.yml  .gitignore  .gitmodules  .nvim.lua  ADS1115_8h_source.html  AHT_8h_source.html  BME280_8h_source.html  BMP180_8h_source.html  BMP280_8h_source.html  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DHT_8h_source.html  DS1307RTC_8h_source.html  DS18B20_8h_source.html  DS3231RTC_8h_source.html  Doxyfile  ENC28J60_8h_source.html  EXT__PCA9685_8h_source.html  HC__SR04_8h_source.html  HX711_8h_source.html  IEEE754tools_8h_source.html  LLM.md  MAX6675__K_8h_source.html  MAXThermocouple_8h_source.html  MCP23017_8h_source.html  PCA9685_8h_source.html  PCF8574_8h_source.html  PzemV2_8h_source.html  PzemV3_8h_source.html  README.md  SCD4x_8h_source.html  SECURITY.md  SGP41_8h_source.html  SHT10_8h_source.html  SHT3x_8h_source.html  Si7021_8h_source.html  Si7021__sonoff_8h_source.html  SuplaDevice_8h_source.html  SuplaSomfy_8h_source.html  (+3618 more)
extras/esp-idf/supla-device/: CMakeLists.txt  Kconfig  component.mk  idf_component.yml  supla_3rd_cert.pem
extras/examples/linux/: CMakeLists.txt  README.md  airly_example.yaml  build_linux_example.sh  debug_socket.cpp  debug_socket.h  main.cpp  sos_binary.yaml  supla-device.yaml  suplet_fifo.cpp  suplet_fifo.h  update_and_build.sh
extras/porting/linux/: CMakeLists.txt  SuplaLinux.cmake  linux_channel_factory.cpp  linux_channel_factory.h  linux_client.cpp  linux_client.h  linux_clock.cpp  linux_clock.h  linux_extension_init.h  linux_file_state_logger.cpp  linux_file_state_logger.h  linux_file_storage.cpp  linux_file_storage.h  linux_log.c  linux_mqtt_client.cpp  linux_mqtt_client.h  linux_network.cpp  linux_network.h  linux_platform.cpp  linux_timers.cpp  linux_yaml_config.cpp  linux_yaml_config.h  mqtt_client.cpp  mqtt_client.h  network_client.cpp
extras/test/: CMakeLists.txt
extras/test/ActionTriggerTests/: action_trigger_tests.cpp
extras/test/BlinkingLedTests/: blinking_led_tests.cpp
extras/test/ButtonTests/: button_tests.cpp  simple_button_tests.cpp
extras/test/ChannelElementTests/: channel_element_tests.cpp
extras/test/ChannelTests/: channel_extended_tests.cpp  channel_tests.cpp
extras/test/ConditionTests/: em_getter_tests.cpp  on_invalid_tests.cpp  on_less_tests.cpp
extras/test/CorrectionTests/: correction_tests.cpp
extras/test/DebugTests/: debug_log_tests.cpp
extras/test/ElectricityMeterTests/: electricity_meter_tests.cpp
extras/test/ElementTests/: element_tests.cpp
extras/test/GpmTests/: gp_measurement_tests.cpp  gp_meter_tests.cpp
extras/test/Html/: html_generators_tests.cpp  html_tag_builder_tests.cpp  text_cmd_input_parameter_tests.cpp
extras/test/HvacTests/: hvac_aux_hyst_tests.cpp  hvac_channel_assignment_tests.cpp  hvac_integration_schedule_tests.cpp  hvac_integration_tests.cpp  hvac_runtime_tests.cpp  hvac_temperature_control_type_tests.cpp  hvac_tests.cpp  weekly_schedule_tests.cpp
extras/test/InternalPinOutputTests/: internal_pin_output_tests.cpp
extras/test/IoTests/: io_tests.cpp
extras/test/LinuxPortTests/: sd4linux_channel_factory_tests.cpp  sd4linux_http_source_tests.cpp  sd4linux_json_parser_tests.cpp  sd4linux_parsed_control_offline_tests.cpp  sd4linux_parser_state_tests.cpp  sd4linux_thermometer_parsed_tests.cpp  sd4linux_varilight_dimmer_tests.cpp
extras/test/LocalActionTests/: local_action_tests.cpp
extras/test/Mqtt/: mqtt_channel_dispatch_tests.cpp  mqtt_prefix_tests.cpp  mqtt_process_data_tests.cpp  mqtt_publish_tests.cpp  mqtt_topic_tests.cpp
extras/test/NotifTests/: notif_tests.cpp
extras/test/PinStatusLedTests/: pin_status_led_tests.cpp
extras/test/RelayTests/: bistable_relay_tests.cpp  relay_hvac_aggregator_tests.cpp  relay_roller_shutter_pair_tests.cpp  relay_tests.cpp  virtual_relay_tests.cpp
extras/test/RgbwDimmerTests/: dimmer_leds_tests.cpp  dimmer_tests.cpp  lighting_pwm_base_tests.cpp  lighting_pwm_leds_tests.cpp  rgb_base_tests.cpp  rgb_cct_base_tests.cpp  rgb_leds_tests.cpp  rgb_legacy_migration_tests.cpp  rgbw_base_tests.cpp  rgbw_leds_test.cpp  rgbw_leds_tests.cpp  rgbw_pwm_base_tests.cpp
extras/test/RollerShutterTests/: roller_shutter_interface_tests.cpp  roller_shutter_tests.cpp
extras/test/SensorTests/: binary_sensor_tests.cpp  container_tests.cpp  impulse_counter_tests.cpp  temperature_drop_sensor_tests.cpp  valve_tests.cpp
extras/test/StorageTests/: key_value_tests.cpp  netif_config_tests.cpp  storage_special_section_tests.cpp  storage_state_tests.cpp  storage_state_wl_byte_tests.cpp  storage_state_wl_sector_tests.cpp
extras/test/SuplaDeviceTests/: channel_conflict_resolver_tests.cpp  factory_test_security_options_tests.cpp  full_startup_tests_with_config.cpp  full_startup_with_real_elements.cpp  srpc_calcfg_timeout_tests.cpp  srpc_packet_log_tests.cpp  supla_device_full_startup_tests.cpp  supla_device_tests.cpp  suplet_startup_tests.cpp
extras/test/SupletTests/: assignment_applier_tests.cpp  capability_registry_tests.cpp  channel_allocator_tests.cpp  definition_cache_tests.cpp  definition_runtime_tests.cpp  json_definition_tests.cpp  json_instance_config_tests.cpp  manager_tests.cpp  registry_tests.cpp  server_config_tests.cpp  storage_tests.cpp  thermometer_group_tests.cpp
extras/test/SwUpdateTests/: sw_update_tests.cpp
extras/test/ToolsTests/: sha256_tests.cpp  (+1 more)
src/: CMakeLists.txt  SuplaDevice.cpp  SuplaDevice.h
src/supla/: action_handler.cpp  action_handler.h  actions.h  arduino_esp_platform.cpp  arduino_mega_platform.cpp  at_channel.cpp  at_channel.h  auto_lock.cpp  auto_lock.h  channel.cpp  channel.h  channel_element.cpp  channel_element.h  channel_extended.cpp  channel_extended.h  condition.cpp  condition.h  condition_getter.cpp  condition_getter.h  correction.cpp  correction.h  crc16.cpp  crc16.h  crc8.cpp  crc8.h  crypto.cpp  crypto.h  definitions.h  element.cpp  element.h  element_with_channel_actions.cpp  element_with_channel_actions.h  esp_idf_mutex.cpp  esp_idf_mutex.h  events.h  io.cpp  io.h  local_action.cpp  local_action.h  log_wrapper.cpp  (+15 more)
src/supla-common/: lck.c  log.c  log.h  proto.h  srpc.c  srpc.h  tools.c
(+862 files in other folders)
